2020-01-17  Charlie Zender  <zender@sastrugi>

	* NCO 4.9.2-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.2-alpha04: Alta-Vista';git push
	git tag -a 4.9.2-alpha04 -m 'ncpdq -U -v lat fix; ncremap sml_crc';git push --tags

	* ncpdq -U now always unpacks all variables, including packed grid variables

	* Create infrastructure to address bug where ncpdq -U strips attributes from packed grid variables yet does not unpack them

	* Merge new intersection code that handles small circles

2020-01-16  Charlie Zender  <zender@sastrugi>

	* nco_sph_plg_area() and edg_typ=sml_crc works with RLL grids

	* nco_sph_plg_area() ignore small circle correction for degenerate triangles (geodesics)

	* nco_sph_plg_area() weed-out degenerate polar points

2020-01-15  Charlie Zender  <zender@sastrugi>

	* NCO 4.9.2-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.2-alpha03: Alta-Vista';git push
	git tag -a 4.9.2-alpha03 -m 'ncks chk_map() NaN fixes; ncremap fv2fv options, TR pg2 compatibility';git push --tags

	* ncclimo and ncremap now export HDF5_USE_FILE_LOCKING='FALSE'
	Qi Tang reported 20200110 that his batch scripts on Cori that use netCDF4 map-files fail unless he sets this

	* nco_map_mk() if Tempest pg grid-files that lack "grid_dims" variables are unstructured then skip sanity check otherwise bail

	* nco_chk_map() report differences in order cmp_dsk_dff not dsk_cmp_dff

	* ncremap disambiguate synonyms for fv2fv and fv2fv_stt, though they are now equivalent

	* ncremap replace "--mono3 --noconserve" in fv2fv with "--in_np 2" per recommendation of Mark Taylor

	* nco_chk_map() more compact format for weight index

	* nco_chk_map() fix index in NaN printing

2020-01-14  Charlie Zender  <zender@sastrugi>

	* nco_chk_map() check for and report NaNs in weight array

	* NCO 4.9.2-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.2-alpha02: Big Horn';git push