@@ -403,7 +403,7 @@ while [ -h "${nco_exe}" ]; do
 done
 drc_nco="$( cd -P "$( dirname "${nco_exe}" )" && pwd )"
 nco_vrs=$(ncks --version 2>&1 > /dev/null | grep NCO | awk '{print $5}')
-nco_sng=$(ncks --version 2>&1 > /dev/null | grep NCO | awk '{print $6}')
+nco_sng=$(ncks --version 2>&1 > /dev/null | grep NCO | awk -F '"' '{print $2}')
 
 # 20190218: Die quickly when NCO is found yet cannot run, e.g., due to linker errors
 if [ -z "${nco_vrs}" ]; then
@@ -762,7 +762,7 @@ if [ ${psn_nbr} -ge 1 ]; then
 fi # !psn_nbr
 
 if [ ${vrs_prn} = 'Yes' ]; then
-    printf "${spt_nm}, the NCO climatology operator, version ${nco_vrs} ${nco_sng}\n"
+    printf "${spt_nm}, the NCO climatology operator, version ${nco_vrs} \"${nco_sng}\"\n"
     printf "Copyright (C) 2016--present Charlie Zender\n"
     printf "This program is part of NCO, the netCDF Operators\n"
     printf "NCO is free software and comes with a BIG FAT KISS and ABSOLUTELY NO WARRANTY\n"
